Fix text alignment in About

--- a/src/utils/_mixins.scss
+++ b/src/utils/_mixins.scss
@@ -36,7 +36,7 @@
 }
 
 @mixin tinyScreens {
-    @media screen and (max-width: 350px){
+    @media screen and (max-width: 370px){
         @content;
     }
 }
